2003-02-06	Ujwal S. Sathyam <ujwal@setlurgroup.com>
    
    * Now displaying tab number in label to make it easier 
      to switch between tabs using function keys.
      
    * Changed version number in Info.plist to 0.6.3.
      

2003-02-05	fabian
    * Fixed a bug in showCursor that causes the loss of
      attributes. That partially solves the double-width
      characters problem.
    * Localized new interface additions for zh_CN and zh_TW.
    * 0.6.3!
      
2003-02-04	Ujwal S. Sathyam <ujwal@setlurgroup.com>

    * Added menu item in tabview contextual menu to move 
      tab to new window.
      
    * Simplified PseudoTerminal code by removing direct 
      references to SCREEN, SCROLLVIEW, TEXTVIEW, TERMINAL, 
      TERM_VALUE. All these operate only on the PTYSession 
      object. Also simplified PseudoTerminal: -initSession 
      code by moving a bunch of it into addSession which 
      is called by other stuff.
      
    * Fixed multi-line copy paste problem that was caused by
      line feed that is inserted when a command wraps over to 
      the next line. Now marking the position where the line 
      feed is inserted and removing it in the copy operation.
      

2003-02-03	Ujwal S. Sathyam <ujwal@setlurgroup.com>

    * Added submenus to tabview contextual menu. Tabview 
      contextual menu is now built and controlled by 
      the tabview delegate.
      

2003-02-02	Ujwal S. Sathyam <ujwal@setlurgroup.com>

    * Added basic Applescript support. One can now write 
      Applescripts to open one or more default or addressbook 
      sessions in a new tab or window. The syntax is:
      
      To open a new session in a new tab:
      launch session "<session_name>" in tab
      
      To open a new session in a new window:
      launch session "<session_name>" in terminal
      
      The <session_name> is either the name of a stored 
      addressbook session or "default session" for a 
      default session.
      